# realestate-ai-uae

./: .env.example  .gitignore  AGENTS.md  COMPLIANCE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RealEstate_AI_PRD_Comprehensive.docx  SECURITY.md  docker-compose.metrics.yml  docker-compose.search.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: backup.yml  ci.yml  governance.yml  iac-validate.yml  release-validate.yml  release.yml  rotate-secrets.yml  security.yml
apps/listing-writer-stub/: main.py  pyproject.toml
apps/listing-writer-stub/tests/: test_listing_writer.py
apps/permit-service/: .eslintrc.cjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/web/: Dockerfile  README.md  i18n.ts  middleware.ts  next-intl.config.ts  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
configs/: mcp-servers.json  project-variables.json
docs/: ADR-0001-architecture.md
docs/api/: listing-writer.yaml  permit-service.yaml
docs/architecture/: runbooks.md
docs/context/: audit-trail.md  context-log.md  first-slice-plan.md  prd-summary.md
docs/services/: hierarchy.html  index.html
infra/helm/: Chart.yaml  (+1 more)
logs/: README.md  context-log.ndjson
services/ml-bridge/: Dockerfile  README.md  package.json  pyproject.toml
services/ml-bridge/app/: main.py
services/ml-bridge/tests/: test_valuation.py
tools/: README.md  context-log.json  mcp-clients.json  metrics-smoke.ts  synthetic-check.ts  update-context.ts
(+486 files in other folders)
