[project]
name = "listing-writer-stub"
version = "0.1.0"
description = "FastAPI stub for the listing writer bridge with compliance gates."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "uvicorn[standard]>=0.29.0,<0.30",
    "httpx>=0.27.0,<0.28",
    "pydantic>=2.7.0,<2.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3",
    "pytest-asyncio>=0.23.0,<0.24",
    "anyio>=4.3.0,<4.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
