[project]
name = "ml-bridge"
version = "0.1.0"
description = "FastAPI adapters bridging permit service to ML pipelines."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<2.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<8.3",
    "pytest-asyncio>=0.23,<0.24",
    "anyio>=4.3,<4.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
